--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -2227,7 +2227,7 @@ div.image {
 }
 
 .features{
-    border-top: 1px solid var(--horizontal_rule_color);
+    border-top: 1px solid gray;
     padding-bottom: 15px;
 }
 
