--- a/templates/contact.html
+++ b/templates/contact.html
@@ -219,9 +219,50 @@
 
                 <p class="size24">Van Blokland has taught graphic design, typography, and type design for over 40 years at the Royal Academy of Fine Arts (KABK) in The Hague and for many years at the Academy of Fine Arts, Arnhem and at the Bachelor and Master’s program in Graphic Design at AKV|St.Joost in Breda. His first typeface was Proforma, a then large series commissioned by Purup, a Danish manufacturer of form-preparation systems. In 1988, Van Blokland’s work brought him ATypI’s coveted Charles Peignot Prize.</p>
 
-                <p class="size24">As cofounder and partner of Type Network, Van Blokland is a dedicated contributor and developer of new type and tools for type design. He currently teaches at Type and Media, the master type design program at KABK in The Hague and at the advanced program for type design at Cooper Union in New York.</p>
+                <p class="size24">As cofounder and partner of Type Network, Van Blokland has been a dedicated contributor and developer of new type and tools for type design. He currently teaches at Type and Media, the master type design program at KABK in The Hague and at the advanced program for type design at Cooper Union in New York.</p>
 
-                <p class="size24" style="margin-bottom: 4em;">Read more about his thoughts on design and education in this interview and in his Lubalin lecture, <a href="https://typenetwork.com/articles/words" target="_blank">“Words,”</a> delivered at <a hre="https://coopertype.org/events/words" target="_blank">Cooper Union</a> in 2015.
+                <h2 class="upgrade-semibold size24">Lectures and interviews</h2>
+
+                <p class="size24">Read more about his thoughts on design and education in this interview and in his long Lubalin lecture, <a href="https://vimeo.com/133052206" target="_blank">“Words,”</a> delivered at <a href="https://coopertype.org/events/words" target="_blank">Cooper Union</a> in 2015.
+                <a href="https://vimeo.com/133052206" target="_blank">
+                    <img class="img-banner" src="images/contact/words.png"/>
+                    <img class="img-banner" src="images/contact/what-is-design.png"/>
+                </a></p>
+
+                <p class="size24">BITS 2016 – A lecture about <a href="https://www.youtube.com/watch?v=riWFl7KzNHI" target="_blank">design models
+                <img class="img-banner" src="images/contact/design-models-1750x978.png"></a>
+                </p>
+
+<!--
+## [Interview Irina](https://vimeo.com/52003904)
+
+![](images/InterviewIrina.png)
+
+## Does no longer exist on  Vimeo [Robothon 2015](https://vimeo.com/123816124)
+
+![](images/Robothon2015.png)
+
+## [Design models - BITS 2016](https://www.youtube.com/watch?v=riWFl7KzNHI&t=19s)
+
+![](images/DesignModelsBITS.png)
+
+## [PageBot - ATypI Montreal 2017](https://www.youtube.com/watch?v=fPasHswCB8E&list=PL0oMAzSh5W9oJSx9BsXeF8UzA44FwB255&index=2)
+
+![](images/PageBot-ATypIMontreal.png)
+
+## [Interview Typo Berlin 2010](https://www.youtube.com/watch?v=Jr1MYisrpIQ&t=29s)
+
+![](images/TypeBerlinInterview2010.png)
+
+## [The End of CSS - Typo Berlin 2014](https://www.typotalks.com/videos/petr-van-blokland-2/)
+
+![](images/TheEndOfCss.png)
+
+## [Typotalk 2011](https://www.typotalks.com/news/2011/05/21/petr-van-blokland-designer-update-whats-next/?icl_en)
+
+-->
+
+![](images/Typotalk2011.png)
                 </p>
             </div>
         </div>
