--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -57,9 +57,6 @@ li a:link, li a:visited, li a:active, {
     text-decoration: none;
     color: #202020;
 }
-li a:hover {
-    color: #808080;
-}
 
 a {
   transition: color 100ms cubic-bezier(0.33, 1, 0.68, 1);
@@ -95,15 +92,16 @@ h2 a:link, h2 a:visited, h2 a:active,
     background-color: #E31C79;
 }
 
-h1, h2, h3, h4, h5, h6, a, ol li, ul li, p {
+h1, h2, h3, h4, h5, h6, a, ol li, ul li, ol li, p, a {
  font-feature-settings: 'liga' 1; 
+ text-decoration: none;
 }
 
-h2 a:hover, .sectionNavList a:hover, .menuBox ul li:hover {
+h2 a:hover, .sectionNavList a:hover, .menuBox ul li:hover, ol li a {
     color: #4E76C0;  
 }
 
-h2 a:active, .sectionNavList a:active, .menuBox ul li:hover {
+h2 a:active, .sectionNavList a:active, .menuBox ul li:hover, ol li a:hover {
     color: #E31C79;  
 }
 
@@ -2996,7 +2994,7 @@ button.buy-button:hover {
         padding-left: 1em;
         padding-bottom: 0em;
     }
-    
+
     .column14:has(.buy-button):not(:has(h2, ul, ol)),
     .column14:has(img):not(:has(h2, ul, ol)) {
         display: none;
